--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-echo Hello World!
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <style>
+      header, footer {
+          padding: 1em;
+          color: white;
+          background-color: #00001a;
+          clear: left;
+          text-align: center;
+      }
+    </style>
+  </head>
+  
+  <header>
+    <h1> 𝐈𝐌𝐀𝐆𝐈𝐍𝐄𝐋𝐈𝐅𝐄 </h1>
+  </header>
+</html>
