--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
           clear: left;
           text-align: center;
       }
+      {
+        border-right-color:#000000;
+        border-right-width:2px;
+        border-right-style:ridge;
+
+        border-left-color:#000000;
+        border-left-width:2px;
+        border-left-style:ridge;
+        }
     </style>
   </head>
   
