--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <html>
   <head>
     <style>
-      header, footer {
-          padding: 1em;
-          color: white;
+      header {
           background-color: #00001a;
+          border-right-style: solid;
+          border-left-style: solid;
+          border-width: 5px;
+          border-color: white;
           clear: left;
+          color: #ffffff;
+          padding: 1em;
           text-align: center;
       }
-      {
-        border-right-color:#000000;
-        border-right-width:2px;
-        border-right-style:ridge;
-
-        border-left-color:#000000;
-        border-left-width:2px;
-        border-left-style:ridge;
-        }
+      article {
+          border-right-style: solid;
+          border-left-style: solid;
+          border-color: white;
+      }
     </style>
   </head>
   
   <header>
     <h1> 𝐈𝐌𝐀𝐆𝐈𝐍𝐄𝐋𝐈𝐅𝐄 </h1>
   </header>
+  
+  <article>
+    <p> test </p>
+  </article>
 </html>
