--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 
 <html>
+
   <head>
     <style>
       header {
-          background-color: #00001a;
-          border-right-style: solid;
-          border-left-style: solid;
-          border-width: 5px;
-          border-color: white;
-          clear: left;
+          background-color: #303030;
           color: #ffffff;
           padding: 1em;
           text-align: center;
       }
-      article {
-          border-right-style: solid;
-          border-left-style: solid;
-          border-color: white;
+      div.story {
+          background-color: #f2f2f2;
+          border-color: #e0e0e0;
+          border-style: solid;
+          border-width: 1px;
+          color: #000000;
+          overflow: auto;
       }
     </style>
   </head>
@@ -26,7 +25,8 @@
     <h1> 𝐈𝐌𝐀𝐆𝐈𝐍𝐄𝐋𝐈𝐅𝐄 </h1>
   </header>
   
-  <article>
-    <p> test </p>
-  </article>
+  <div class="story">
+    <p> Testmode42 </p>
+  </div>
+  
 </html>
