--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       header {
           background-color: #303030;
           color: #ffffff;
-          padding: 1em;
+          font-family: Georgia, Times, "Times New Roman", serif;
+          font-size: 20px;
+          font-weight: bold;
+          padding: 0.5em;
           text-align: center;
       }
       div.story {
@@ -16,17 +19,37 @@
           border-style: solid;
           border-width: 1px;
           color: #000000;
-          overflow: auto;
+          font: 11pt Courier New, Courier, monospace;
+	      height: 500px;
+	      margin: 20px auto;
+          margin-top: 30px;
+	      overflow: auto;
+	      padding: 0px 10px 0px 10px;
+	      text-align: left;
+          width: 70%;
+      }
+      footer {
+          background-color: #303030;
+          bottom: 0;
+          color: #ffffff;
+          padding: 0.2em;
+          position: fixed;
+          text-align: center;
+          width: 100%;
       }
     </style>
   </head>
   
   <header>
-    <h1> 𝐈𝐌𝐀𝐆𝐈𝐍𝐄𝐋𝐈𝐅𝐄 </h1>
+    <h1> ImagineLife </h1>
   </header>
   
   <div class="story">
-    <p> Testmode42 </p>
+     <!–– Output ––>
   </div>
+  
+  <footer>
+    <p>   </p>
+  </footer>
   
 </html>
