--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           font-weight: bold;
           padding: 0.5em;
           text-align: center;
+          width: 100%;
       }
       div.story {
           background-color: #f2f2f2;
@@ -26,7 +27,7 @@
 	      overflow: auto;
 	      padding: 0px 10px 0px 10px;
 	      text-align: left;
-          width: 70%;
+          width: 588px;
       }
       footer {
           background-color: #303030;
@@ -45,6 +46,7 @@
   </header>
   
   <div class="story">
+     <!–– Output ––>
   </div>
   
   <footer>
